[project]
name = "unsplash-uploader"
version = "0.1.0"
description = "Uploads photos to Unsplash via the API."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=14.3.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "toml>=0.10.2",
    "local-first-common",
]

[project.scripts]
upload-unsplash = "unsplash_uploader.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unsplash_uploader"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", branch = "main" }

[tool.pytest.ini_options]
pythonpath = ["src"]
